BACKLOG-369 Styling fixes in SURFteams for external groups - without "add team" and "search" the table was directly under the provider buttons - provider with large name was partially invisible

--- a/coin-teams-war/src/main/webapp/css/default.css
+++ b/coin-teams-war/src/main/webapp/css/default.css
@@ -684,7 +684,7 @@ fieldset.search-fieldset {
 .team-options a {
   display: block;
   padding: 5px 10px;
-  background: url("../media/bg-toggle.png") no-repeat scroll 0 -300px transparent; /* Default */
+  background: url("../media/bg-toggle.png") repeat-x scroll 0 -300px transparent; /* Default */
   color: #333;
 }
 
@@ -804,4 +804,8 @@ span.page {
 
 .pagination .last {
   background: transparent url(../media/teams-icons-sprite.png) 100% -399px no-repeat;
+}
+
+.home-external-groups {
+  margin-top: 1em;
 }
