--- a/coin-teams-war/src/main/webapp/css/gadget.css
+++ b/coin-teams-war/src/main/webapp/css/gadget.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2011 SURFnet bv, The Netherlands
+ * Copyright 2012 SURFnet bv, The Netherlands
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -506,7 +506,7 @@ fieldset.search-fieldset {
 .team-options a {
 	display: block;
 	padding: 5px 10px;
-	background: url("../media/bg-toggle.png") no-repeat scroll 0 -300px transparent; /* Default */
+	background: url("../media/bg-toggle.png") repeat-x scroll 0 -300px transparent; /* Default */
 	color: #333;
 }
 
@@ -599,4 +599,8 @@ span.page {font-weight: bold;}
 
 .pagination .last {
   background: transparent url(../media/teams-icons-sprite.png) 100% -399px no-repeat;
+}
+
+.home-external-groups {
+  margin-top: 1em;
 }
